# jiraya

./: 01-jira-triage-agent.md  README.md  pyproject.toml
.workshop/: dev.yaml
examples/: repo_registry.yaml
src/jiraku/: cli.py  composition.py
src/jiraku/adapters/: __init__.py  work_runner.py
src/jiraku/adapters/classifier/: __init__.py  _llm_cli.py  opencode_classifier.py  recommend.py
src/jiraya/: __init__.py  __main__.py  cli.py  composition.py
src/jiraya/adapters/: __init__.py  work_runner.py
src/jiraya/adapters/agents/: __init__.py  worker_agents.py
src/jiraya/adapters/classifier/: __init__.py  _llm_cli.py  copilot_classifier.py  gemini_classifier.py  keyword_classifier.py  recommend.py
src/jiraya/adapters/inmemory/: __init__.py  event_bus.py  inbox_repo.py  seed.py  ticket_source.py
src/jiraya/adapters/jira/: __init__.py  rest_ticket_source.py
src/jiraya/adapters/resolver/: __init__.py  catalog.py  composite.py  keyword_resolver.py  learned_resolver.py  registry_resolver.py
src/jiraya/adapters/workspace/: __init__.py  provisioner.py
src/jiraya/application/: __init__.py  poller.py  router.py  triage_service.py
src/jiraya/domain/: __init__.py  events.py  models.py
src/jiraya/ports/: __init__.py  inbound.py  outbound.py
src/jiraya/tui/: __init__.py  app.py  detail.py
tests/: conftest.py  test_agents.py  test_classifier.py  test_config.py  test_domain.py  test_gemini.py  test_inmemory.py  test_jira_rest.py  test_opencode.py  test_poller.py  test_recommend.py  test_repo.py  test_triage_service.py  test_tui.py  test_work.py
