[project]
name = "jiraya"
version = "0.1.0"
description = "Agent-powered Jira triage agent with a TUI dashboard"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
jiraya = "jiraya.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "textual-dev>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
